// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectingSeries component render correctly 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#212745",
          "fontFamily": "BeVietnamPro-Medium",
          "fontSize": 17,
        },
        Object {},
        undefined,
      ]
    }
  >
    Your article will be added to
  </Text>
  <RCTScrollView
    horizontal={true}
    showsHorizontalScrollIndicator={false}
  >
    <View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F1F2F8",
            "borderRadius": 100,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "marginRight": 8,
            "marginTop": 6,
            "opacity": 1,
            "paddingHorizontal": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
          }
        }
        testID="tag.item"
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Light",
                "fontSize": 15,
              },
              Object {},
              Object {
                "color": "#282E53",
                "flexShrink": 1,
              },
            ]
          }
          testID="tag.label"
        >
          title string
        </Text>
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                Object {
                  "marginStart": 4,
                },
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View
                testID="tag.icon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SelectingSeries component render correctly when data is empty 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#212745",
          "fontFamily": "BeVietnamPro-Medium",
          "fontSize": 17,
        },
        Object {},
        undefined,
      ]
    }
  >
    Your article will be added to
  </Text>
  <RCTScrollView
    horizontal={true}
    showsHorizontalScrollIndicator={false}
  >
    <View />
  </RCTScrollView>
</View>
`;
